add: image and link on pao de queijo page

--- a/recipes/pao-de-queijo.html
+++ b/recipes/pao-de-queijo.html
@@ -2,9 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Pao de Queijo</title>
+        <title>Pão de Queijo</title>
     </head>
     <body>
-        <h1>Pao de Queijo</h1>
+        <h1>Pão de Queijo</h1>
+        <p>(Brazilian Cheese Bread)</p>
+        <img src="../img/pao-de-queijo.jpg" 
+        alt="a delicious plateful of pão de queijo"
+        width="300">
+        <h2>Description</h2>
+        <p>This recipes comes from <a href="https://braziliankitchenabroad.com/brazilian-cheese-bread/">Brazilian Kitchen Abroad</a> and is one of my all time favourite comfort foods. If you haven't tried this Brazilian cheese bread, you haven't lived a full life.</p>
+
     </body>
 </html>
