--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     </head>
 
     <body>
-        <h1>Little Miss Abyss Eats Food</h1>
-        <ul>
-            <li><a href="recipes/pao-de-queijo.html">Pão de Queijo (Brazilian Cheese Bread)</a></li>
-            <li><a href="recipes/gf-pizza.html">Gluten Free Portuguese Pizza</a></li>
-            <li><a href="recipes/yogurt.html">Homemade Yogurt</a></li>
-        </ul>
+        <header>
+             <h1>Little Miss Abyss Eats Food</h1>
+        </header>
+        <div class="menu">
+            <h2>Recipes</h2>
+            <ul class="recipe-list">
+                <li><a href="recipes/pao-de-queijo.html">Pão de Queijo (Brazilian Cheese Bread)</a></li>
+                <li><a href="recipes/gf-pizza.html">Gluten Free Portuguese Pizza</a></li>
+                <li><a href="recipes/yogurt.html">Homemade Yogurt</a></li>
+            </ul>
+        </div>
     </body>
 </html>
