style:  header and image treatment

--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     </head>
 
     <body>
-        <header>
-             <h1>Little Miss Abyss Eats Food</h1>
+        <header class="header">
+             <h1 class="heading-one">Little Miss Abyss Eats Food</h1>
         </header>
+        <div class="img-line">
+            <span>
+                <img src="./img/pao-de-queijo.jpg" alt="some delicious Brazilian cheese bread">
+                <img src="./img/pizza.jpg" alt="some delicious Portuguese pizza">
+                <img src="./img/yogurt.jpg" alt="some yummy yogurt">
+            </span>
+        </div>
         <div class="menu">
-            <h2>Recipes</h2>
+            <h2 class="heading-two">Recipes</h2>
             <ul class="recipe-list">
                 <li><a href="recipes/pao-de-queijo.html">Pão de Queijo (Brazilian Cheese Bread)</a></li>
                 <li><a href="recipes/gf-pizza.html">Gluten Free Portuguese Pizza</a></li>
